--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mounika Vegi's Portfolio</title>
+    <title>Vamshi Sakinala's Portfolio</title>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,15 +11,15 @@
     <header>
     <section id="about">
         <div class="container">
-            <title>Mounika Vegi Portfolio</title>
+            <title>Vamshi Sakinala Portfolio</title>
             <h1>Welcome to My Portfolio</h1>
             <p> "As a Data Analyst, I specialize in leveraging Python, R programming, and SQL to derive meaningful insights from data. My skill set includes proficiency in data visualization platforms such as Tableau and Power BI, and I am well-versed in utilizing Azure Cloud Services to optimize data processes."<p>
             <h2> A LITTLE ABOUT MYSELF </h2>
             <p>"Hello and welcome! I'm Mounika Vegi, a passionate Data Analyst committed to converting data into meaningful insights. Here, you'll discover a handpicked collection of projects showcasing my proficiency with diverse analytical tools and methodologies. I greatly value your feedback, so please feel free to share your thoughts!"<p>
                 
-            </p>"Fun Fact: 🌟 When I'm not diving into data, you'll likely find me immersed in drawing, painting, reading to expand my horizons, or adventuring to new and exciting destinations!"</p>
-            <img src="imagep.jpeg" alt="Mounika Vegi" class="profile-pic">
-            <p>Check out my <a href="https://bold.pro/my/mounika-sai" target="_blank"><strong>About Me</strong></a> on GitHub!</p>
+            </p>"Fun Fact: 🌟 When I'm not diving into data, you'll likely find me playing or watching cricket, expanding my horizons, or adventuring to new and exciting destinations!"</p>
+            <img src="imagep.jpeg" alt="Vamshi Sakinala" class="profile-pic">
+            <p>Check out my <a href="_" target="_blank"><strong>About Me</strong></a> on GitHub!</p>
             <div class="about-text">
     
 </body>
@@ -30,37 +30,29 @@
         <div class="container">
             <h2>Projects</h2>
             <div class="project">
-                    <img src="Olympic images.png" alt="Project 1" class="project-img">
+                    <img src="uber.img" alt="Project 1" class="project-img">
                     <div class="project-info">
-                    <h3>Olympic data analysis</h3>
-                    <p>The Tokyo Olympic Data Analysis on Azure project leverages Azure's data services to efficiently process, transform, and visualize historical Olympic data for extracting valuable insights.     </div>
-                    <a href="https://github.com/Mounikavegi/-Olympic-Data-Analysis.git" target="_blank">View Project</a>
+                    <h3>Uber GCP DATA ENGINEER</h3>
+                    <p>This project leverages GCP with Mage.ai for ETL, BigQuery for data warehousing, Looker Studio for visualization, and Cloud Storage for Uber data analytics.</div>
+                    <a href="https://github.com/vamshi187/uber-data-engineering-mage-project" target="_blank">View Project</a>
             <div class="project">
-                    <img src="pizza_images.png" alt="Project 2" class="project-img">
+                    <img src="netflix.img" alt="Project 2" class="project-img">
                     <div class="project-info">
-                    <h3>Pizza Sales</h3>
-                    <p>Analyzing 2015 pizza store sales to inform strategic planning using Power BI.
-                    <a href="https://github.com/Mounikavegi/Pizza_Sales.git" target="_blank">View Project</a>
+                    <h3>netflix sql project</h3>
+                    <p>This project analyzes Netflix's movies and TV shows data using SQL to uncover insights and answer key business questions.
+                    <a href="https://github.com/vamshi187/-netflix_sql_project" target="_blank">View Project</a>
              </div class="project">
-                    <img src="Adventure_image.png" alt="Project 3" class="project-img">
+                    <img src="football.img" alt="Project 3" class="project-img">
                     <div class="project-info">
-                    <h3>Adventure work Sales</h3>
-                    <p>This project creates a Power BI dashboard to analyze Adventure Works' sales data using structured SQL and Power Query transformations.
-                    <a href="https://github.com/Mounikavegi/Adventures_Sales_Promo.git" target="_blank">View Project</a>
+                    <h3>Football Azure Data Engineering</h3>
+                    <p>This Python-based project crawls data from Wikipedia using Apache Airflow, cleans it and pushes it Azure Data Lake for processing.
+                    <a href="https://github.com/vamshi187/Football-Azure-Data-Engineering" target="_blank">View Project</a>
             <div class="project">
-                <img src="financial_A.png" alt="Project 4" class="project-img">
+                <img src="spotify.img" alt="Project 4" class="project-img">
                 <div class="project-info">
-                    <h3>Financial Data Analysis and Modeling</h3>
-                    <p>Executed comprehensive financial data analysis using Microsoft Excel, integrating V-lookup, statistical functions, and regression modeling to identify outliers and perform hypothesis testing; findings informed strategic business decisions, optimizing operational efficiency and enhancing financial performance.</p>
-                    <a href="https://github.com/Mounikavegi/Financial-Analysis_Modelling.git" target="_blank">View Project</a>
-                </div>
-            </div>
-            <div class="project">
-                <img src="trends.img.png" alt="Project 5" class="project-img">
-                <div class="project-info">
-                    <h3>Interactive Dashboard Development for Education Trends</h3>
-                    <p>Developed interactive dashboards and insightful reports on US education trends, UIC code analysis, and unemployment rates using Power BI, showcasing data visualization skills and proficiency in Power BI tools.</p>
-                    <a href="https://github.com/username/education-dashboard" target="_blank">View Project</a>
+                    <h3>SPOTIFY ANALYSIS AWS DATA ENGINEER</h3>
+                    <p>A scalable data pipeline leveraging Apache Kafka for real-time streaming and AWS services for efficient, secure data processing, storage, and analysis.</p>
+                    <a href="https://github.com/vamshi187/SPOTIFY-ANALYSIS_AWS-DATA-ENGINEER" target="_blank">View Project</a>
                 </div>
             </div>
         </div>
@@ -68,14 +60,13 @@
     <section id="contact">
         <div class="container">
             <h2>Contact</h2>
-            <p>Feel free to reach out to me via <a href="mailto:vmouni18@gmail.com">vmouni18@gmail.com</a></p>
-            <p>LinkedIn: <a href="https://www.linkedin.com/in/mounika-sai-46b1b5272" target="_blank">linkedin.com/in/mounika-sai</a></p>
-            <p>GitHub: <a href="https://github.com/Mounikavegi" target="_blank">github.com/Mounikavegi</a></p>
+            <p>Feel free to reach out to me via <a href="mailto:Vamshis285@gmail.com">Vamshis285@gmail.com</a></p>
+            <p>GitHub: <a href="https://github.com/vamshi187" target="_blank">https://github.com/vamshi187</a></p>
        </div>
     </section>
     <footer>
         <div class="container">
-            <p>&copy; 2024 Mounika Vegi</p>
+            <p>&copy; 2024 Vamshi Sakinala</p>
         </div>
     </footer>
 </body>
