--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div class="container">
             <title>Vamshi Sakinala Portfolio</title>
             <h1>Welcome to My Portfolio</h1>
-            <p> "As a Data Analyst, I specialize in leveraging Python, R programming, and SQL to derive meaningful insights from data. My skill set includes proficiency in data visualization platforms such as Tableau and Power BI, and I am well-versed in utilizing Azure Cloud Services to optimize data processes."<p>
+            <p> "As a Data Engineer, I specialize in leveraging Python and SQL to build scalable data solutions using GCP, Azure, and AWS. My expertise includes data visualization with Power BI and Tableau, along with optimizing data processes through cloud-native technologies."<p>
             <h2> A LITTLE ABOUT MYSELF </h2>
-            <p>"Hello and welcome! I'm Mounika Vegi, a passionate Data Analyst committed to converting data into meaningful insights. Here, you'll discover a handpicked collection of projects showcasing my proficiency with diverse analytical tools and methodologies. I greatly value your feedback, so please feel free to share your thoughts!"<p>
+            <p>"Hello and welcome! I'm Vamshi Sakinala, a passionate Data Engineer committed to converting data into meaningful insights. Here, you'll discover a handpicked collection of projects showcasing my proficiency with diverse analytical tools and methodologies. I greatly value your feedback, so please feel free to share your thoughts!"<p>
                 
             </p>"Fun Fact: 🌟 When I'm not diving into data, you'll likely find me playing or watching cricket, expanding my horizons, or adventuring to new and exciting destinations!"</p>
             <img src="imagep.jpeg" alt="Vamshi Sakinala" class="profile-pic">
