--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 
             </p>"Fun Fact: 🌟 When I'm not diving into data, you'll likely find me playing or watching cricket, expanding my horizons, or adventuring to new and exciting destinations!"</p>
             <img src="imagep.jpeg" alt="Vamshi Sakinala" class="profile-pic">
-            <p>Check out my <a href="_" target="_blank"><strong>About Me</strong></a> on GitHub!</p>
+            <p>Check out my <a href="https://www.myperfectresume.com/build-profile/finalize" target="_blank"><strong>About Me</strong></a> on GitHub!</p>
             <div class="about-text">
     
 </body>
