--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<div id="intro">
 						<h1>Vamshi Sakinala Portfolio<br />
 						</h1>
-						<p> As a Data Analyst Professional, I bring expertise in Python, R programming, SQL, and data visualization tools like Tableau and Power BI, complemented by my familiarity with Azure Cloud Services.<br />
+						<p> "Experienced Data Engineer and Analyst skilled in Python, R, SQL, and data visualization tools like Tableau and Power BI. Proficient in Azure and AWS services, I excel at optimizing data pipelines, ETL processes, and creating scalable solutions for data-driven insights."<br />
 						</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -53,7 +53,7 @@
 									
 									<h2><a href="#">A LITTLE ABOUT MYSELF<br />
 									</a></h2>
-									<p> "Hello and welcome! I'm Vamshi Sakinala, a dedicated Data Analyst on a mission to transform data into actionable insights.Below you'll find a curated selection of projects that demonstrate my expertise in various analytics tools and techniques. Your feedback is invaluable to me—so please don't hesitate to share your thoughts!"<br><strong>FUN FACT:</strong>🌟 When I'm not crunching numbers, you'll find me either cheering for a soccer match, drumming up a rhythm, or out exploring new places!"</p>
+									<p> "👋 Hi, I'm Vamshi Sakinala, a passionate Data Analyst and Data Engineer with 5+ years of experience transforming complex data into actionable insights. I specialize in building and optimizing data pipelines, enhancing data processes with Python, PySpark, Databricks, and cloud platforms like Azure and AWS. Explore my projects to see how I turn data challenges into innovative solutions!"<br><strong>FUN FACT:</strong>🌟 When I'm not crunching numbers, you'll find me either cheering for a cricket match, or exploring new destinations!"</p>
 								</header>
 								<a href="#" class="image main"><img src="images/IMG_0594.jpg" alt="" /></a>
 								<ul class="actions special">
