--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 		<title>Vamshi Sakinala Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="stylesheet" href="Asset/CS/main.css"/>
+		<noscript><link rel="stylesheet" href="Asset/CS/noscript.css"/></noscript>
 	</head>
 	<body class="is-preload" style="background-image: url(images/aim_dsjobssss.jpg)">
 
