--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 										<h2><a href="https://github.com/vamshi187/Football-Azure-Data-Engineering"> Azure Data Engineering<br />
 										</a></h2>
 									</header>
-									<a href="https://github.com/vamshi187/Football-Azure-Data-Engineering" class="image fit"><img src="football.png" alt="" /></a>
+									<a href="https://github.com/vamshi187/Football-Azure-Data-Engineering" class="image fit"><img src="Football .png" alt="" /></a>
 									<p> "From crawling Wikipedia: Data with Python and Apache Airflow to cleaning and processing it in Azure Data Lake."</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/vamshi187/Football-Azure-Data-Engineering" class="button">View Project</a></li>
